--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://ben-fault-recorder-2.herokuapp.com/",
   "dependencies": {
     "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.2",
